# DebIDE

./: README.md  pyproject.toml  requirements.txt
debian/: README.Debian  changelog  control  watch
debide/: __init__.py  app.py  cli.py  config.py  editor.py  layout.py  plugins.py  scaffold.py  tasks.py
debide.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
debide/resources/: app.tcss  default_tasks.yaml
docs/: ARCHITECTURE.md
